# CG-Final-Project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: duck.json  duck1.weights
assets/ducks/: duck.json
assets/largeModels/: chair.json
configs/: bird_nurbs.json  chair_nurbs.json  duck_nurbs.json  eiffel_tower_nurbs.json  multi_duck_nurbs.json  ring_nurbs.json  simple.json  specular_simple.json  test_nurbs.json
include/: aabb.h  accel.h  bezier.h  bounds3.h  bsdf.h  camera.h  config.h  config_io.h  core.h  curve.h  geometry.h  image.h  integrator.h  interaction.h  kdtree_accel.h  light.h  load_obj.h  ray.h  scene.h  utils.h
report/: acmart.cls  report.tex
src/: aabb.cpp  accel.cpp  bezier.cpp  bounds3.cpp  bsdf.cpp  camera.cpp  curve.cpp  geometry.cpp  image.cpp  integrator.cpp  kdtree_accel.cpp  light.cpp  load_obj.cpp  scene.cpp
